JD01_10 All tasks completed